[gd_scene load_steps=6 format=2]

[ext_resource path="res://Cards/CardTag.png" type="Texture" id=1]
[ext_resource path="res://Cards/Card.gd" type="Script" id=2]
[ext_resource path="res://UI/Mana.png" type="Texture" id=3]
[ext_resource path="res://UI/SmallCoin.png" type="Texture" id=4]
[ext_resource path="res://PixelRPG.tres" type="DynamicFont" id=5]

[node name="Card" type="MarginContainer"]
script = ExtResource( 2 )

[node name="CardImage" type="ColorRect" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
margin_right = 64.0
margin_bottom = 96.0
rect_min_size = Vector2( 64, 96 )
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="CardImage"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
mouse_filter = 2
custom_constants/margin_right = 4
custom_constants/margin_top = 2
custom_constants/margin_left = 4
custom_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CardImage/MarginContainer"]
margin_left = 4.0
margin_top = 2.0
margin_right = 60.0
margin_bottom = 94.0
mouse_filter = 2
custom_constants/separation = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CardImage/MarginContainer/VBoxContainer"]
margin_right = 56.0
margin_bottom = 6.0
mouse_filter = 2
custom_constants/separation = 0

[node name="Title" type="Label" parent="CardImage/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 56.0
margin_bottom = 6.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
text = "Title"

[node name="ManaLabel" type="Label" parent="CardImage/MarginContainer/VBoxContainer/HBoxContainer"]
visible = false
margin_left = 42.0
margin_top = 2.0
margin_right = 47.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 5 )
text = "2"

[node name="TextureRect" type="TextureRect" parent="CardImage/MarginContainer/VBoxContainer/HBoxContainer"]
visible = false
margin_left = 47.0
margin_right = 56.0
margin_bottom = 10.0
mouse_filter = 2
texture = ExtResource( 3 )
stretch_mode = 6

[node name="CenterContainer" type="CenterContainer" parent="CardImage/MarginContainer/VBoxContainer"]
margin_top = 8.0
margin_right = 56.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 32 )
mouse_filter = 2

[node name="Icon" type="TextureRect" parent="CardImage/MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 28.0
margin_top = 16.0
margin_right = 28.0
margin_bottom = 16.0
mouse_filter = 2

[node name="InfoOne" type="Label" parent="CardImage/MarginContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 56.0
margin_bottom = 48.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )

[node name="Control" type="Control" parent="CardImage/MarginContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 56.0
margin_bottom = 54.0
rect_min_size = Vector2( 0, 4 )
mouse_filter = 2

[node name="InfoTwo" type="Label" parent="CardImage/MarginContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 56.0
margin_bottom = 62.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )

[node name="TagAnchor" type="Node2D" parent="CardImage"]
position = Vector2( 52, 0 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Tag" type="TextureRect" parent="CardImage/TagAnchor"]
visible = false
margin_left = -10.0
margin_top = -15.0
margin_right = 10.0
margin_bottom = 6.0
texture = ExtResource( 1 )
flip_v = true

[node name="MarginContainer" type="MarginContainer" parent="CardImage/TagAnchor/Tag"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 6

[node name="HBoxContainer" type="HBoxContainer" parent="CardImage/TagAnchor/Tag/MarginContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 18.0
margin_bottom = 15.0
custom_constants/separation = 0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="CardImage/TagAnchor/Tag/MarginContainer/HBoxContainer"]
margin_left = 1.0
margin_right = 9.0
margin_bottom = 13.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="CardImage/TagAnchor/Tag/MarginContainer/HBoxContainer"]
margin_left = 9.0
margin_right = 14.0
margin_bottom = 13.0
custom_constants/margin_top = 2

[node name="TagLabel" type="Label" parent="CardImage/TagAnchor/Tag/MarginContainer/HBoxContainer/MarginContainer"]
margin_top = 4.0
margin_right = 5.0
margin_bottom = 10.0
custom_fonts/font = ExtResource( 5 )
text = "5"
align = 1
valign = 2

[node name="CoinDrop" type="Position2D" parent="."]
position = Vector2( 32, -8 )

[connection signal="gui_input" from="." to="." method="_on_Card_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_Card_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Card_mouse_exited"]
